--- a/index.html
+++ b/index.html
@@ -18,5 +18,19 @@
     <div class="bg-blue-500 text-white p-4 rounded-lg shadow-md">
         Este es un ejemplo de clase utilitaria en Tailwind CSS.
     </div>
+    <div class="flex h-screen p-5">
+        <div class="group relative my-auto">
+            <pre class="relative max-w-full overflow-hidden rounded-xl bg-slate-800 p-5 hover:overflow-scroll hover:ease-in-out"><code class=" text-slate-100">async function foo() {
+        const req = await fetch("https://example.org?query=hello+world");
+        return await req.json();
+      }</code></pre>
+            <div class="group/icon absolute right-2 top-2 p-1">
+                <svg class="h-5 w-5 text-gray-500 opacity-0 transition-all ease-in-out group-hover/icon:text-white group-hover:opacity-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path d="M8 2a1 1 0 000 2h2a1 1 0 100-2H8z"></path>
+                    <path d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"></path>
+                </svg>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
