--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial: NodeJS + Spotify + OpenAI</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
+    <script src="/app.js"></script>
+		
 </head>
 <body>
-    <h1 class="text-xl font-bold">Probando 123</h1>
-    <div>
-        <label for="prompt" class="flex items-center max-w-sm mx-auto"></label>
-        <input class="border-2 border-rose-500 rounded-md outline-none" type="text" placeholder="Escribe aquí" id="prompt"/>
-        <button id="button">buscar</button>
-    </div>
-    <br>
-    </br>
-    <div class="bg-blue-500 text-white p-4 rounded-lg shadow-md">
-        Este es un ejemplo de clase utilitaria en Tailwind CSS.
-    </div>
-    <div class="flex h-screen p-5">
+    <div id="code-block-1"></div>
+    <!-- <div class="flex h-screen p-5">
         <div class="group relative my-auto">
             <pre class="relative max-w-full overflow-hidden rounded-xl bg-slate-800 p-5 hover:overflow-scroll hover:ease-in-out"><code class=" text-slate-100">async function foo() {
     const req = await fetch("https://example.org?query=hello+world");
@@ -30,7 +26,8 @@
                     <path d="M3 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v6h-4.586l1.293-1.293a1 1 0 00-1.414-1.414l-3 3a1 1 0 000 1.414l3 3a1 1 0 001.414-1.414L10.414 13H15v3a2 2 0 01-2 2H5a2 2 0 01-2-2V5zM15 11h2a1 1 0 110 2h-2v-2z"></path>
                 </svg>
             </div>
+            <span class="absolute bottom-2 right-3 text-sm text-gray-500">Javascript</span>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
