detallitos de espaciado despues de snippets

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                 desea acceder a un recurso (como una página web) que está alojado en un
                 servidor, el cliente envía una solicitud HTTP al servidor. El servidor
                 procesa la solicitud y envía una respuesta HTTP de vuelta al cliente,
-                generalmente con el recurso solicitado. A continuación te mostramos
+                generalmente con el recurso solicitado.<br></br> A continuación te mostramos
                 cómo:
                 <!-- CODE SNIPPET -->
                 <div class="code-block" data-file="server.js"></div>
             </p>
-            <p class="text-m">
+            <p class="text-m mt-4">
                 Node. js pertenece al paradigma de naturaleza asíncrona y basado en eventos. La aplicación sigue
                 ejecutándose
                 mientras espera solicitudes entrantes Esto significa que Node.js no bloquea el hilo principal de
@@ -164,7 +164,7 @@
 
             <p class="mt-4 font-bold">Conseguir el Token para Spotify</p>
             <div class="code-block" data-file="fetchSpotifyToken.js"></div>
-            <p>Para poder utilizar el API de Spotify, dado que nos fue asignado el endpoint de álbum, primero observamos
+            <p class="mt-4">Para poder utilizar el API de Spotify, dado que nos fue asignado el endpoint de álbum, primero observamos
                 que
                 tiene un método POST(información tomada de la documentación del manejo de la API) para traer el token
                 requerido
@@ -177,7 +177,7 @@
             <p class="mt-4 font-bold">Enviar una prompt a OpenAI Chat GPT</p>
 
             <div class="code-block" data-file="fetchOpenAi.js"></div>
-            <p>
+            <p class="mt-4">
                 La función toma una clave de autenticación y un mensaje de entrada opcional. Este mensaje se envía al
                 servidor
                 de
