--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             <p class="text-m">
                 Aquí hay un ejemplo de cómo usar la API que Giphy que nos da como respuesta un URL de un gif de perritos: 
                 <br /><br /> 
+                <div class="code-block" data-file="fetchGiphy.js"></div>
                 Una vez creada una cuenta de desarrollador, lo que buscamos es mostrar en nuestra página gifs de “perro”, 
                 lo cual se logra por medio de URL’s, pero para eso, es necesario realizar la búsqueda, es por esta razón 
                 que usaremos el endpoint de tipo “search”. <br /><br />
